--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,1 +1,9 @@
 <h2>Here is Login Page</h2>
+
+<h2>{{title}}</h2>
+<div>
+    <h1>Event Binding</h1>
+    <button (click)='submit()'>Click</button>
+</div>
+
+
