--- a/src/app/admin/login/login.component.css
+++ b/src/app/admin/login/login.component.css
@@ -1,7 +1,18 @@
-h2{
+h2,div{
     margin-left: 43%;
     font-size: 20px;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
     color: crimson;
+}
+button{
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    color: crimson;
+    background-color: aqua;
+    border-radius: 5px;
+}
+button:hover{
+    background-color: aliceblue;
 }
