--- a/src/app/admin/signup/signup.component.css
+++ b/src/app/admin/signup/signup.component.css
@@ -5,3 +5,10 @@ h2{
     font-family: 'Times New Roman', Times, serif;
     color: crimson;
 }
+div{
+    margin-left: 23%;
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    color: crimson;
+}
