--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,9 +13,11 @@ h1{
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
     font-weight: bold;
+    border-radius: 5px;
 }
 #signup{
     color: crimson;
+    border-radius: 5px;
     background-color: aqua;
     padding-right: 10px;
     font-family: 'Times New Roman', Times, serif;
